--- a/aula_01/airflow/.env
+++ b/aula_01/airflow/.env
@@ -1,2 +1,2 @@
 AIRFLOW_UID=502
-_PIP_ADDITIONAL_REQUIREMENTS=pandas requests yfinance
+_PIP_ADDITIONAL_REQUIREMENTS=pandas requests yfinance apache-airflow-providers-airbyte
