Secure credentials in .env files and add git-sync configuration
- Added git-sync service to Airflow docker-compose (commented out)
- Created README_GITSYNC.md with setup instructions for students
- Removed hardcoded GitHub tokens from PyAirbyte scripts
- Added .env.example templates for both Airflow and PyAirbyte
- Updated .gitignore to exclude .env files
- All credentials now managed via environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,13 @@ venv/
 ENV/
 env/
 
+# Environment variables
+.env
+.env.local
+*.env
+
 # Airflow
+aula_01/airflow/.env
 aula_01/airflow/logs/
 aula_01/airflow/config/
 airflow/logs/scheduler/
