chore: remove postgres-data from git tracking and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ GEMINI.md
 *.tmp
 aula_03/pyairbyte/.cache/default_cache/default_cache.duckdb
 aula_03/pyairbyte/.cache/default_cache/default_cache.duckdb
+
+# PostgreSQL data directories
+aula_04/labelstudio/postgres-data/
+aula_04/*/postgres-data/
