--- a/trabalho/superset/docker-compose.yml
+++ b/trabalho/superset/docker-compose.yml
@@ -7,9 +7,11 @@ services:
       - "8088:8088"
     volumes:
       - ./superset_home:/app/superset_home
-      - ../data:/app/data                 
+      - ../data:/app/data
+      - ./superset_config.py:/app/superset_config.py
     environment:
-      - SUPERSET_SECRET_KEY=mysecretkey123
+      - SUPERSET_SECRET_KEY=o-rato-roeu-a-roupa-do-rei-de-roma
+      - SUPERSET_CONFIG_PATH=/app/superset_config.py
     command:
       bash -c "
         superset db upgrade &&
