--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py310
+envlist = py
 
 [testenv]
 deps =
-    -rrequirements.txt
     pytest
-    apache-airflow
+
 commands =
     pytest tests/ --maxfail=1 --disable-warnings
